<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_style_4"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="controller.Vencedor" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_parabens"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_vc_e"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_vencedor"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_breve"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#1E90FF"
        android:textStyle="bold"
        android:background="@drawable/bg_style"
        android:padding="5dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/settings"
        android:contentDescription="@string/str_em_breve" />

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_menu"
        android:background="@drawable/ganhou_buttons_style"
        android:onClick="fnMenu" />

</LinearLayout>
